--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,7 +1,7 @@
 .product{
     width: 300px;
     height: 510px;
-    border: 1px solid gray;
+    border: 1px solid #95a0a7;
     border-radius: 8px;
 
     /* position is for cart position */
