--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -2,11 +2,16 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
     margin-left: 50px;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 .products-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
+}
+
+.cart-container{
+    margin-left: 40px;
+    margin-right: 20px;
 }
