--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -2,7 +2,10 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
     margin-left: 50px;
-    margin-right: 30px;
+}
+
+.total-products{
+    margin-left: 50px;
 }
 
 .products-container{
@@ -13,5 +16,5 @@
 
 .cart-container{
     margin-left: 40px;
-    margin-right: 20px;
+   
 }
