--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -9,3 +9,18 @@
     font-size: 14px;
 
 }
+.icon-delete{
+    height: 20px;
+}
+
+.btn-clear-cart{
+    width: 110%;
+    height: 35px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    background: #ff3030;
+    font-size: 15px;
+}
